@@ -225,6 +225,45 @@ package pa1 {
 }
 ```
 
+- The textual export now properly exports `ConnectionUsages` such as in the following model.
+
+```
+package Parts {
+    part <p1> part1 {
+        port po1;
+    }
+    part <p2> part2 {
+        port po2;
+    }
+    part <p3> part3 {
+        port po3;
+    }
+}
+package Connections {
+    private import Parts::part1;
+    private import Parts::part2;
+    connect p1 to p2;
+    connect [1] p1 to [1] p2;
+    connect (p1, p2, Parts::part3);
+    connect p1.po1 to p2.po2;
+}
+package MReqs {
+    requirement <Mre1>;
+}
+package SReqs {
+    requirement <Sre1>;
+}
+package Derivations {
+    private import RequirementDerivation::*;
+    private import MReqs::*;
+    private import SReqs::*;
+    #derivation connection {
+        end #original ::> Mre1;
+        end #derive ::> Sre1;
+    }
+}
+```
+
 == Technical details
 
 * For technical details on this {product} release (including breaking changes and dependency updates), please refer to https://github.com/eclipse-syson/syson/blob/main/CHANGELOG.adoc[changelog].
